@@ -4,6 +4,7 @@
    Move the code for creating a new task into create_task().
    Strip the token from the displayed task description to be closer
    to the initial implementation (closes #2925003).
+   Add a new column to the tasks list showing the used type (keyword).
 
 
 2010-01-01  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
